--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
       {%- endif -%}
     </p>
-    <link rel="stylesheet" href="/blog-jekyll/video-embed.css">
+    <link rel="stylesheet" href="/video-embed.css">
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
